# web-docs-scorer

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  crawled_text_qualifier.py  example_text.txt  info_basica_lengua.jsonl  info_basica_n_chars.jsonl  pyproject.toml  qualifications_score_charts.py  requirements.txt
.claude/: settings.local.json
.claude/commands/: refresh_context.md  run_tests.md  setup_dev.md
docs/: README.md  documentation_standards.md  principles.md
docs/project/: architecture.md  requirements.md  tech_stack.md
docs/reference/: README.md
docs/reference/adrs/: adr-001-compression-library.md  adr-002-cli-library.md
example/: example1.jsonl  example2.txt  ita_Latn.jsonl  zh_hplt_1_2_952203152.txt
language_adaptation/: extract_ratios.py  medians_language.csv
outputs/: 75_analized_languages.html  75_analysed_languages.html  ontocord_comparison_hplt.html
src/: Untitled.ipynb  __init__.py  caracteres.ipynb  docscorer.py  ejecutar.ipynb  executing_example.ipynb  pruebas.ipynb  qualifications_score_charts.py  review_hplt3_samples.ipynb
src/docscorer/: __init__.py  cli.py  configuration.py  docscorer.py  executing.ipynb  utils.py  wds_charts.py
src/docscorer/configurations/: char_patterns.json  informativeness_config.json
src/docscorer/configurations/interpolation_functions/: function_group_a.pkl  function_group_b.pkl  function_group_c.pkl  function_group_d.pkl
src/docscorer/configurations/language_adaption/: extract_ratios.py  lang_code_conversion.json  lang_families_script.csv  medians_language.csv  no_punctuation_exception.json
src/docscorer/language_adaption/: extract_ratios.py  medians_language.csv
src/docscorer/modules/: informativeness.py
src/docscorer/scorers/: boilersplates_score.py  informativeness_scorer.py  lang_scorer.py  long_texts_scorer.py  numbers_scorer.py  punct_scorer.py  repeated_scorer.py  short_segm_scorer.py  short_segments_score.py  singular_chars_scorer.py  url_scorer.py  utils.py
src/docscorer/utils/: utils.py
src/language_adaptation/: extract_ratios.py
utils/: utils.py
