[project]
name = "docscorer"
version = "1.1"
license = {file = "LICENSE"}
readme = "README.md"
description = "scorer for web-crawled documents."
requires-python = ">=3.8"
dependencies = [
    "docopt",
    "pandas",
    "joblib",
    "zstandard",
    "scipy"
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Filters",
]

[[project.authors]]
name = "Prompsit Language Engineering"
email = "info@prompsit.com"

[[project.maintainers]]
name = "Pablo Peñarrubia"
email = "ppenarrubia@prompsit.com"
[[project.maintainers]]
name = "Marta Bañon"
email = "mbanon@prompsit.com"
[[project.maintainers]]
name = "Jaume Zaragoza"
email = "jzaragoza@prompsit.com"

[project.urls]
Homepage = "https://github.com/pablop16n/web-docs-scorer/"
"WebDocsScorer on GitHub" = "https://github.com/pablop16n/web-docs-scorer/"
"Prompsit Language Engineering" = "http://www.prompsit.com"
"HPLT Project" = "https://hplt-project.org"


[tool.setuptools.package-data]
docscorer = [ "configurations/language_adaption/*", "configurations/interpolation_functions/*"]
