[project]
name = "docscorer"
version = "1.3.0"
license = {file = "LICENSE"}
readme = "README.md"
description = "scorer for web-crawled documents."
requires-python = ">=3.10"
dependencies = [
    "docopt",
    "pandas",
    "joblib",
    "zstandard",
    "scipy>=1.14",
    "numpy>=2"
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Filters",
]

[[project.authors]]
name = "Prompsit Language Engineering"
email = "info@prompsit.com"

[[project.maintainers]]
name = "Pablo Peñarrubia"
email = "ppenarrubia@prompsit.com"
[[project.maintainers]]
name = "Marta Bañon"
email = "mbanon@prompsit.com"
[[project.maintainers]]
name = "Jaume Zaragoza"
email = "jzaragoza@prompsit.com"

[project.urls]
Homepage = "https://github.com/pablop16n/web-docs-scorer/"
"WebDocsScorer on GitHub" = "https://github.com/pablop16n/web-docs-scorer/"
"Prompsit Language Engineering" = "http://www.prompsit.com"
"HPLT Project" = "https://hplt-project.org"


#[tool.setuptools.package-data]
#docscorer = [ "configurations/*"]
#configuration = [  "configurations/*"]

[tool.setuptools.package-data]
docscorer = [ "configurations/*", "configurations/language_adaption/*", "configurations/interpolation_functions/*"]
configuration = [  "configurations/*"]


[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.0.0",
    "pytest>=8.0.0"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I"]
fix = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = true
